--- a/zh/index.html
+++ b/zh/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="images/temp-mail-icon.png" type="image/x-icon" />
+    <link rel="canonical" href="https://unziponline.org/zh/" />
+    <link rel="icon" href="icon.png" type="image/x-icon" />
     <script>
         tailwind.config = {
             theme: {
@@ -417,7 +420,7 @@
             </div>
 
             <div class="flex space-x-4 flex-wrap justify-center items-center t-12 my-6">
-                <span><a href="/">English</a></span><span><a href="/zh">简体中文</a></span>
+                <span><a href="https://unziponline.org/">English</a></span><span><a href="https://unziponline.org/zh/">简体中文</a></span>
             </div>
             
             <!-- 底部信息 -->
