--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="canonical" href="https://unziponline.org/" />
     <link rel="icon" href="icon.png" type="image/x-icon" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-186D48K68L"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-186D48K68L');
+    </script>
     <script>
         tailwind.config = {
             theme: {
