--- a/zh/index.html
+++ b/zh/index.html
@@ -12,6 +12,15 @@
     <link rel="icon" href="images/temp-mail-icon.png" type="image/x-icon" />
     <link rel="canonical" href="https://unziponline.org/zh/" />
     <link rel="icon" href="icon.png" type="image/x-icon" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-186D48K68L"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-186D48K68L');
+    </script>
     <script>
         tailwind.config = {
             theme: {
