--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
                 <div class="flex items-center space-x-4">
                     <div class="hidden md:block">
                         <div class="ml-10 flex items-baseline space-x-4">
-                            <a href="#" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">About</a>
-                            <a href="#" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">Help</a>
-                            <a href="#" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">Contact</a>
+                            <a href="unzip-7z-online" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">7z</a>
                         </div>
                     </div>
                 </div>
