--- a/unzip-7z-online.html
+++ b/unzip-7z-online.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="canonical" href="https://unziponline.org/unzip-7z-online.html" />
+    <link rel="canonical" href="https://unziponline.org/unzip-7z-online" />
     <link rel="icon" href="icon.png" type="image/x-icon" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-186D48K68L"></script>
