--- a/unzip-tar-gz.html
+++ b/unzip-tar-gz.html
@@ -121,7 +121,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
                         <i class="fas fa-file-archive text-2xl text-primary-600 mr-3"></i>
-                        <a href="#" class="text-2xl font-bold">Unzip Online</a>
+                        <a href="https://unziponline.org/" class="text-2xl font-bold">Unzip Online</a>
                     </div>
                 </div>
                 
@@ -145,7 +145,7 @@
             <!-- Header -->
             <header class="bg-gradient-to-r from-primary-600 to-blue-400 text-white p-8 text-center">
                 <h1 class="text-4xl font-bold mb-3">
-                    <i class="fas fa-file-archive mr-3"></i>>Unzip TAR GZ Online Free
+                    <i class="fas fa-file-archive mr-3"></i>Unzip TAR GZ Online Free
                 </h1>
                 <p class="text-lg opacity-90">Professional tool to unzip TAR GZ online - Decompress compressed tarball files instantly in your browser</p>
                 <div class="mt-4 flex justify-center flex-wrap">
