--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unzip Online - Free ZIP File Extractor Tool</title>
     <meta name="description" content="Unzip Online instantly! Extract files from ZIP, RAR, TAR, GZ archives FREE. No installs, no sign-ups. Drag & drop your ZIP file to open, view, & download contents securely in seconds. Works on any device. Try now!">
+    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
     <!-- 支持多种格式的解压库 -->
     <script src="https://xenova.github.io/unarchiver.js/dist/unarchiver.min.js"></script>
     <!-- TAR 文件支持 -->
-    <script src="https://unpkg.com/js-untar@2.0.0/build/dist/untar.min.js"></script>
+
+    <script src="js/tailwindcss.js"></script>
+
+   
     <!-- 添加更好的RAR支持 -->
     <script>
         // 预加载unarchiver.js的格式支持
@@ -35,7 +40,6 @@
         });
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="canonical" href="https://unziponline.org/" />
     <link rel="icon" href="icon.png" type="image/x-icon" />
     <!-- Google tag (gtag.js) -->
