--- a/unzip-tar-gz.html
+++ b/unzip-tar-gz.html
@@ -11,7 +11,8 @@
     <!-- 支持多种格式的解压库 -->
     <script src="https://xenova.github.io/unarchiver.js/dist/unarchiver.min.js"></script>
     <!-- TAR 文件支持 -->
-    <script src="https://unpkg.com/js-untar@2.0.0/build/dist/untar.min.js"></script>
+    <script src="js/tailwindcss.js"></script>
+
     <!-- 添加更好的RAR支持 -->
     <script>
         // 预加载unarchiver.js的格式支持
@@ -35,7 +36,6 @@
         });
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="canonical" href="https://unziponline.org/unzip-tar-gz" />
     <link rel="icon" href="icon.png" type="image/x-icon" />
     <!-- Google tag (gtag.js) -->
