--- a/zh/index.html
+++ b/zh/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
     <!-- 支持多种格式的解压库 -->
     <script src="https://xenova.github.io/unarchiver.js/dist/unarchiver.min.js"></script>
-    <script src="js/tailwindcss.js"></script>
+    <script src="https://unziponline.org/js/tailwindcss.js"></script>
 
     <!-- TAR 文件支持 -->
     <!-- 添加更好的RAR支持 -->
