--- a/unzip-tar-gz.html
+++ b/unzip-tar-gz.html
@@ -13,6 +13,10 @@
     <!-- TAR 文件支持 -->
     <script src="js/tailwindcss.js"></script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4158779929727637"
+           crossOrigin="anonymous"></script> 
+    <meta name="google-adsense-account" content="ca-pub-4158779929727637">
+
     <!-- 添加更好的RAR支持 -->
     <script>
         // 预加载unarchiver.js的格式支持
