--- a/vi/index.html
+++ b/vi/index.html
@@ -12,6 +12,10 @@
     <script src="https://xenova.github.io/unarchiver.js/dist/unarchiver.min.js"></script>
     <script src="https://unziponline.org/js/tailwindcss.js"></script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4158779929727637"
+           crossOrigin="anonymous"></script> 
+    <meta name="google-adsense-account" content="ca-pub-4158779929727637">
+
     <!-- TAR 文件支持 -->
     <!-- 添加更好的RAR支持 -->
     <script>
