--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             
             <div class="flex space-x-4 flex-wrap justify-center items-center t-12 my-6">
                 <span><a href="https://unziponline.org/">English</a></span><span><a href="https://unziponline.org/zh/">简体中文</a></span>
-                <span><a href="https://unziponline.org/vi/">Tiếng Việt</a></span>
+                <span><a href="https://unziponline.org/vi/">Tiếng Việt</a></span><span><a href="https://unziponline.org/es/">Español</a></span>
             </div>
 
             <!-- Bottom Bar -->
