--- a/vi/index.html
+++ b/vi/index.html
@@ -520,6 +520,7 @@
                 <span><a href="https://unziponline.org/">English</a></span>
                 <span><a href="https://unziponline.org/zh/">简体中文</a></span>
                 <span><a href="https://unziponline.org/vi/">Tiếng Việt</a></span>
+                <span><a href="https://unziponline.org/es/">Español</a></span>
             </div>
             
             <!-- Bottom Info -->
