--- a/es/index.html
+++ b/es/index.html
@@ -451,6 +451,7 @@
                 <span><a href="https://unziponline.org/">English</a></span><span><a href="https://unziponline.org/zh/">中文</a></span>
                 <span><a href="https://unziponline.org/vi/">Tiếng Việt</a></span>
                 <span><a href="https://unziponline.org/es/">Español</a></span>
+                <span><a href="https://unziponline.org/ru/">Русский</a></span>
             </div>
             
             <div class="border-t border-gray-700 pt-8">
