--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
                     <ul class="space-y-2">
                         <li><a href="https://histre.com/@xiaoqiu2017wy/notes/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">histre</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">About Us</a></li>
+                        <li><a href="https://checkcosmetic.online/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">check cosmetic</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Help Guide</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Privacy Policy</a></li>
                     </ul>
