--- a/unzip-tar-gz.html
+++ b/unzip-tar-gz.html
@@ -125,7 +125,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
                         <i class="fas fa-file-archive text-2xl text-primary-600 mr-3"></i>
-                        <a href="https://unziponline.org/" class="text-2xl font-bold">Unzip Online</a>
+                        <a href="#" class="text-2xl font-bold">Unzip Online</a>
                     </div>
                 </div>
                 
@@ -133,6 +133,8 @@
                 <div class="flex items-center space-x-4">
                     <div class="hidden md:block">
                         <div class="ml-10 flex items-baseline space-x-4">
+                            <a href="https://unziponline.org/unzip-tar-gz" target="_blank" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">unzip tar gz</a>
+                            <a href="https://unziponline.org/unzip-7z-online" target="_blank" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">unzip 7z</a>
                             <a href="#" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">About</a>
                             <a href="#" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">Help</a>
                             <a href="#" class="text-gray-500 hover:text-primary-500 px-3 py-2 rounded-md text-sm font-medium">Contact</a>
