--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
                         <i class="fas fa-file-archive text-2xl text-primary-600 mr-3"></i>
-                        <a href="#" class="text-2xl font-bold">Unzip Online</a>
+                        <a href="/" class="text-2xl font-bold">Unzip Online</a>
                     </div>
                 </div>
                 
