feat:quick link

--- a/unzip-7z-online.html
+++ b/unzip-7z-online.html
@@ -377,7 +377,7 @@
                     <ul class="space-y-2">
                         <li><a href="https://histre.com/@xiaoqiu2017wy/notes/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">histre</a></li>
                         <li><a href="https://checkcosmetic.online/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">check cosmetic</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Help Guide</a></li>
+                        <li><a href="https://myvirtualpianosheets.app/virtual-piano" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">virtual piano</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Privacy Policy</a></li>
                     </ul>
                 </div>
