--- a/unzip-tar-gz.html
+++ b/unzip-tar-gz.html
@@ -578,9 +578,9 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Home</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">About Us</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Help Guide</a></li>
+                        <li><a href="https://histre.com/@xiaoqiu2017wy/notes/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">histre</a></li>
+                        <li><a href="https://checkcosmetic.online/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">check cosmetic</a></li>
+                        <li><a href="https://myvirtualpianosheets.app/virtual-piano" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">virtual piano</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Privacy Policy</a></li>
                     </ul>
                 </div>
