--- a/unzip-7z-online.html
+++ b/unzip-7z-online.html
@@ -9,6 +9,18 @@
     <link rel="canonical" href="https://unziponline.org/unzip-7z-online" />
     <link rel="icon" href="icon.png" type="image/x-icon" />
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4158779929727637"
+           crossOrigin="anonymous"></script> 
+    <meta name="google-adsense-account" content="ca-pub-4158779929727637">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-186D48K68L"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-186D48K68L');
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script>
