--- a/unzip-7z-online.html
+++ b/unzip-7z-online.html
@@ -147,7 +147,7 @@
                                     <i class="fa fa-file-o mr-2"></i> Start Unzip 7z Online
                                 </label>
                                 <p class="text-gray-500 text-sm">or drag and drop your 7z file here</p>
-                                <input type="file" id="fileUpload" class="hidden" accept=".zip,.7z,.rar,.tar,.gz,.bz2,.xz" aria-hidden="true">
+                                <button id="fileUpload" class="hidden" accept=".zip,.7z,.rar,.tar,.gz,.bz2,.xz" aria-hidden="true"/>
                             </div>
                         </a>
                     </div>
