--- a/index.html
+++ b/index.html
@@ -475,10 +475,10 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="https://histre.com/@xiaoqiu2017wy/notes/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">histre</a></li>
+                        <li><a href="https://restore-photo.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">restore photo</a></li>
                         <li><a href="https://checkcosmetic.online/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">check cosmetic</a></li>
                         <li><a href="https://myvirtualpianosheets.app/virtual-piano" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">virtual piano</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Privacy Policy</a></li>
+                        <li><a href="https://eyeshapedetector.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">eye shape detector</a></li>
                     </ul>
                 </div>
                 
