--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
                         <li><a href="https://checkcosmetic.online/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">check cosmetic</a></li>
                         <li><a href="https://myvirtualpianosheets.app/virtual-piano" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">virtual piano</a></li>
                         <li><a href="https://eyeshapedetector.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">eye shape detector</a></li>
+                        <li><a href="https://onlinenotepad101.org/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Online Notepad</a></li>
                     </ul>
                 </div>
                 
