--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Support</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">FAQ</a></li>
+                        <li><a href="https://share-text.org/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">share text</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Contact Us</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Feedback</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">API Docs</a></li>
