--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         <li><a href="https://share-text.org/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">share text</a></li>
                         <li><a href="https://howattractiveami.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">how pretty am I</a></li>
                         <li><a href="https://pdf2url.com/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">pdf link generator</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">API Docs</a></li>
+                        <li><a href="https://youtubecommentsdownloader.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">YouTube Comments Downloader</a></li>
                     </ul>
                 </div>
             </div>
