Add Batch Code Checker link to index.html

--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
                         <li><a href="https://howattractiveami.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">how pretty am I</a></li>
                         <li><a href="https://pdf2url.com/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">pdf link generator</a></li>
                         <li><a href="https://youtubecommentsdownloader.app/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">YouTube Comments Downloader</a></li>
+                        <li><a href="https://batchcodechecker.org/" target="_blank" class="text-gray-300 hover:text-primary-400 transition-colors duration-200">Batch Code Checker</a></li>
                     </ul>
                 </div>
             </div>
